Prevent clipping of the send to selected dropdown with a min-height on the backgrid container

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -63,6 +63,7 @@ footer {
 
 .backgrid-container {
   // Keep backgrid from scrolling
+  min-height: 400px;
   height: 100%;
   // overflow: none !important;
 }
